--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,16 +1,17 @@
 //шапка сайта
+
 .header {
+  border-bottom: 1px solid $page-header-border;
+}
+
+.header__content {
   display: flex;
   align-items: center;
 }
 
-.header__border {
-  border-bottom: 1px solid $page-header-border;
-}
-
 //логотип
 .logo {
-  font-family: "Raleway", sans-serif;
+  font-family: $secondary-font-family;
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
@@ -18,24 +19,24 @@
   color: $logo-color;
 }
 
+.logo__accent {
+  color: $accent-color;
+}
+
 .header__logo {
   display: flex;
   margin-right: 93px;
 }
 
-.logo__accent {
-  color: $accent-color;
-}
-
 //навигация
 .site-nav,
-.site-nav__item {
+.site-nav__list {
   display: flex;
   align-items: center;
 }
 
-.site-nav__item,
-.header__contact-list {
+.site-nav__list,
+.header__contact-link {
   font-weight: 500;
   font-size: 14px;
 
@@ -43,7 +44,7 @@
   letter-spacing: 0.02em;
 }
 
-.site-nav__item: not(: last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -55,64 +56,74 @@
   color: $primary-text-color;
   text-decoration: none;
 
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  @include transition1(color);
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     color: $accent-color;
+  }
 }
 
-.main-nav__link--current {
-    position: relative;
+// .site-nav__list {
+//   display: flex;
+//   align-items: center;
+// }
+
+.site-nav__link--current {
+  position: relative;
+  color: $accent-color;
+
+  &:hover,
+  &:focus {
     color: $accent-color;
+  }
 }
 
 .site-nav__link--current::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -1px;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
 
-    height: 4px;
-    width: 100%;
+  height: 4px;
+  width: 100%;
 
-    background-color: $accent-color;
-    border-radius: 2px;
- }
+  background-color: $accent-color;
+  border-radius: 2px;
+}
 
- //контакты
-.header__contact-list {
-     display: flex;
-     align-items: center;
-     margin-left: auto;
- }
+//контакты
+.header__contact {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
 
- .header__contact-item:not(:last-child) {
-     margin-right: 50px;
- }
+.header__contact-item:not(:last-child) {
+  margin-right: 50px;
+}
 
- .header__contact-link {
-     display: flex;
-     align-items: center;
+.header__contact-link {
+  display: flex;
+  align-items: center;
 
-     color: $secondary-text-color;
-     text-decoration: none;
+  color: $secondary-text-color;
+  text-decoration: none;
 
-     transition-property: color;
-     transition-duration: 250ms;
-     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  @include transition1(color);
 
-     &:hover, &:focus {
-         color: $accent-color;
-     }
- }
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
 
- .header__contact-icon {
-     margin-right: 10px;
-     fill: currentColor;
+.header__contact-icon {
+  margin-right: 10px;
+  fill: currentColor;
 
-     &:hover, &:focus {
-         fill: $accent-color;
-     }
- }
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+  }
+}
