--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,11 +10,21 @@ $secondary-bg-color: #f5f4fa; //второй фон
 $footer-bg-color: #2f303a; //фон банера и подвала
 
 $footer-link: rgba(255, 255, 255, 0.6); //цвет ссылок подвала
+$footer-border: rgba(255, 255, 255, 0.3);
+$box-footer: rgba(0, 0, 0, 0.15);
 $icon-color: rgba(175, 177, 184, 1); //цвет иконок команды
+$icon-bg-color: rgba(255, 255, 255, 0.1);
 
 $page-header-border: #ececec; //цвет рамки шапки сайта
 $portfolio-border: #eeeeee; //цвет рамки карточек в portfolio
-$card-set-gap: 30px; //отступы между карточками в portfolio
+
+$card-list-gap: 30px; //отступы между карточками в portfolio
 
 $regular-clients-border: rgba(175, 177, 184, 1); // рамка в "Постоянные клиенты"
 $form-border: rgba(33, 33, 33, 0.2); // поле для Коментариев в модальном окне
+
+$primary-font-family: "Roboto", sans-serif;
+$secondary-font-family: "Raleway", sans-serif;
+
+$primary-letter-spacing: 0.03em;
+$secondary-letter-spacing: 0.06em;
