--- a/css/main.css
+++ b/css/main.css
@@ -108,16 +108,17 @@ img {
           align-items: center;
 }
 
+.site-nav__item:not(:last-child),
+.site-nav__list__item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .site-nav__list,
 .header__contact-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
-
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
 }
 
 .site-nav__link {
