--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -33,6 +33,10 @@
 .site-nav__list {
   display: flex;
   align-items: center;
+
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .site-nav__list,
@@ -44,9 +48,9 @@
   letter-spacing: 0.02em;
 }
 
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
-}
+// .site-nav__item:not(:last-child) {
+//   margin-right: 50px;
+// }
 
 .site-nav__link {
   display: inline-block;
@@ -64,11 +68,6 @@
   }
 }
 
-// .site-nav__list {
-//   display: flex;
-//   align-items: center;
-// }
-
 .site-nav__link--current {
   position: relative;
   color: $accent-color;
@@ -77,20 +76,33 @@
   &:focus {
     color: $accent-color;
   }
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+
+    height: 4px;
+    width: 100%;
+
+    background-color: $accent-color;
+    border-radius: 2px;
+  }
 }
 
-.site-nav__link--current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
+// .site-nav__link--current::after {
+//   content: "";
+//   position: absolute;
+//   left: 0;
+//   bottom: -1px;
 
-  height: 4px;
-  width: 100%;
+//   height: 4px;
+//   width: 100%;
 
-  background-color: $accent-color;
-  border-radius: 2px;
-}
+//   background-color: $accent-color;
+//   border-radius: 2px;
+// }
 
 //контакты
 .header__contact {
